--- a/myreact/src/App.module.css
+++ b/myreact/src/App.module.css
@@ -40,3 +40,21 @@
   color: gold;
   font-size: 50px;
 }
+.react {
+  background: purple;
+}
+* {
+  box-sizing: border-box;
+}
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
